deployment/prod/uni-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managex-dev
  labels:
    app: managex-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: managex-dev
  template:
    metadata:
      labels:
        app: managex-dev
    spec:
      containers:
        - name: managex-dev
          image: 399600302704.dkr.ecr.ap-south-1.amazonaws.com/managex:dev-laravel-a5316bf62525dc720bfdff37e66d1f6812a82ae3
          ports:
            - containerPort: 80
