deployment/prod/managex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: managex-dev-service
spec:
  type: NodePort
  selector: 
    app: managex-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
