deployment/prod/managex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managex-dev-ingress
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/aacc2df6-2a05-4799-99a8-4ded9e7ab36c
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managex-dev-service
                port:
                  number: 80
        
  tls:
    - hosts:
        - greatify.xyz
      secretName: tls-secret
